package org.almanaque.controller;

public class EmprestimoController {
}
