package org.almanaque.model.enums;

public enum StatusEmprestimo {
    EMPRESTADO,
    DEVOLVIDO
}
