package org.almanaque.model.enums;

public enum TipoUsuario {
    LEITOR,
    ADMIN
}